# zero2prod

./: Cargo.toml  configuration.yml  init_db.sh
migrations/: 20230508110209_create_subscription_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscribe.rs
tests/: health_check_it.rs
